# unsupervised

./: .gitignore  README.md  extract_notebook_images.py  journal_dev_autoencoder.md  journal_dev_gan.md  main.py  pyproject.toml  rapport.qmd  rapport_experimentation.md
.agents/: AGENTS.md
.agents/skills/developer-standards/: SKILL.md
notebooks/: 01_kmeans.ipynb  01_kmeans_shapes.ipynb  01_kmeans_shapes_imagefolder.ipynb  02_pca.ipynb  02_pca_shapes.ipynb  03_autoencoder.ipynb  04_som.ipynb  04_som_shapes.ipynb  05_synthese.ipynb  05_vae.ipynb  06_gan.ipynb  06_gan_shapes.ipynb  06_gan_shapes_vanilla.ipynb
src/: autoencoder.py  base.py  dataset.py  gan.py  helper.py  helper_utils.py  kmeans.py  metrics.py  pca.py  som.py  vae.py  viz.py
src/algorithms/: pca.py
