[project]
name = "projet-unsupervised"
version = "0.1.0"
description = "unsupervised learning project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.2",
    "pillow>=11.3.0",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
    "matplotlib>=3.10.0",
    "torchvision>=0.23.0",
    "gradio>=4.0.0",
    "jupyter>=1.1.1",
]

[project.scripts]
pca-app = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src",
    "app.py"
]

[tool.uv]
package = true


