[project]
name = "projet-unsupervised"
version = "0.1.0"
description = "unsupervised learning project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.2",
    "pillow>=11.3.0",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
    "matplotlib>=3.10.0",
    "torchvision>=0.23.0",
    "gradio>=4.0.0",
    "jupyter>=1.1.1",
    "plotly>=6.9.0",
    "ipywidgets>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }


